--- a/docker/Task_2/crud/Dockerfile
+++ b/docker/Task_2/crud/Dockerfile
@@ -9,6 +9,7 @@ ENV PATH="/venv/bin:$PATH"
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+RUN python3 manage.py migrate
 EXPOSE 8000
 
 ENTRYPOINT ["python", "manage.py", "runserver", "0.0.0.0:8000"]
